fix(ghost): header nav sizing and visibility

--- a/ghost/assets/css/components/header.css
+++ b/ghost/assets/css/components/header.css
@@ -54,7 +54,7 @@
 
 #mobile-menu-container .nav a {
   display: block;
-  font-size: 1.25rem;
+  /* font-size: 1.25rem; */
   padding: 0.5rem 0;
 }
 
